--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,9 @@ jobs:
     name: Tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+			- name: Enable Corepack
+			  run: corepack enable
 
       - name: Set Node.js 22.x
         uses: actions/setup-node@v4
@@ -28,7 +30,9 @@ jobs:
     name: TypeScript
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+			- name: Enable Corepack
+			  run: corepack enable
 
       - name: Set Node.js 22.x
         uses: actions/setup-node@v4
@@ -45,7 +49,9 @@ jobs:
     name: Formatting
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+			- name: Enable Corepack
+			  run: corepack enable
 
       - name: Set Node.js 22.x
         uses: actions/setup-node@v4
@@ -62,7 +68,9 @@ jobs:
     name: Knip
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+			- name: Enable Corepack
+			  run: corepack enable
 
       - name: Set Node.js 22.x
         uses: actions/setup-node@v4
